--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/redux-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Redux toDo</title>
+    <title>toDo Redux</title>
   </head>
   <body class="bg-gray-700">
     <div id="root"></div>
